# Real-Time-Vision-For-Social-Robots

./: README.md
src/emorobcare_cv_gesture_detection/: package.xml  setup.cfg  setup.py
src/emorobcare_cv_gesture_detection/config/: config.yaml
src/emorobcare_cv_gesture_detection/emorobcare_cv_gesture_detection/: node_gesture_detection.py
src/emorobcare_cv_hri_multiuser_engagement/: README.md  package.xml  setup.cfg  setup.py
src/emorobcare_cv_hri_multiuser_engagement/config/: 00-default.yaml  emorobcare_cv_hri_multiuser_engagement_analyzers.yaml
src/emorobcare_cv_hri_multiuser_engagement/emorobcare_cv_hri_multiuser_engagement/: emorobcare_cv_hri_multiuser_engagement.py
src/emorobcare_cv_hri_multiuser_engagement/launch/: emorobcare_cv_hri_multiuser_engagement.launch.py  main.launch.py
src/emorobcare_cv_hri_multiuser_engagement/module/: emorobcare_cv_hri_multiuser_engagement  emorobcare_cv_hri_multiuser_engagement.yaml
src/emorobcare_cv_hri_multiuser_engagement/test/: test_synth_data.py
src/emorobcare_cv_hri_yesno_recognition/: README.md  package.xml  setup.cfg  setup.py
src/emorobcare_cv_msgs/: .gitignore  CMakeLists.txt  README.md  package.xml
src/emorobcare_cv_msgs/msg/: EngagementDetail.msg  EngagementGeometry.msg  GestureRecognition.msg  GestureRecognitions.msg  MultiUserEngagementLevel.msg  ObjectDetection.msg  ObjectDetections.msg  PointingDetection.msg  ProcessingTime.msg
src/emorobcare_cv_object_detection/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/emorobcare_cv_pointing_inference/: package.xml  setup.cfg  setup.py
(+13 files in other folders)
